# AdtroBot

./: .env.example  .gitignore  AUDIT_REPORT.md  BOTFATHER_SETUP.md  CLAUDE.md  Dockerfile  alembic.ini  nixpacks.toml  pyproject.toml  railway-vars.txt
.github/workflows/: deploy.yml
.planning/: BUGS.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS-v2.md  PITFALLS.md  STACK.md  SUMMARY.md
admin-frontend/: .gitignore  package-lock.json  package.json  playwright-standalone.config.ts  playwright.config.ts  vite.config.ts
admin-frontend/src/: index.css  main.tsx
admin-frontend/tests/: auth.setup.ts  debug-prod.spec.ts  diagnose-prod.spec.ts
admin-frontend/tests-standalone/: prod-check.spec.ts
migrations/: env.py
migrations/versions/: 2026_01_22_3cd28dafcf62_create_users_table.py  2026_01_22_5d5aadbabd72_add_user_notification_fields.py  2026_01_22_d3fd5383e8ea_add_user_birth_fields.py  2026_01_22_f93e1451536d_add_tarot_fields.py  2026_01_23_4e898b8d0011_add_default_admin_user.py  2026_01_23_a1b2c3d4e5f6_add_birth_location_fields.py  2026_01_23_b1c2d3e4f5a6_add_tarot_spreads_table.py  2026_01_23_c2d3e4f5a6b7_add_detailed_natal.py  2026_01_23_c6bc722b76ba_add_subscription_models.py  2026_01_23_d4e5f6a7b8c9_add_admin_table.py  2026_01_23_e5f6a7b8c9d0_add_scheduled_messages.py  2026_01_23_f6a7b8c9d0e1_add_horoscope_content.py  2026_01_23_g7b8c9d0e1f2_add_ab_experiments_utm.py  2026_01_23_h8c9d0e1f2g3_add_horoscope_cache_tables.py  2026_01_24_12302cba8088_drop_image_assets_table.py  2026_01_24_4c005bb76409_add_image_assets_table.py  2026_01_24_bb3aea586917_add_ai_usage_table.py
src/: __init__.py  config.py  main.py
src/admin/: auth.py  models.py  router.py  schemas.py
src/bot/: __init__.py  bot.py
src/core/: logging.py
src/db/: engine.py
src/monitoring/: __init__.py  cost_tracking.py  health.py  metrics.py
src/services/: horoscope_cache.py  image_asset.py  scheduler.py  telegraph.py
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_horoscope.py  test_natal.py  test_profile.py  test_start.py  test_tarot.py  (+1 more)
(+300 files in other folders)
