[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "adtrobot"
version = "0.1.0"
description = "Telegram astrology and tarot bot"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.1",
    "pydantic-settings>=2.7.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.128.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.poetry]
package-mode = false

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
