[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "adtrobot"
version = "0.1.0"
description = "Telegram astrology and tarot bot"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.46",
    "asyncpg>=0.31.0",
    "alembic>=1.18.1",
    "pydantic-settings>=2.7.1",
    "structlog>=25.5.0",
    "uvicorn[standard]>=0.40.0",
    "python-dotenv>=1.0.1",
    "fastapi>=0.128.0",
    "aiogram (>=3.20,<4)",
    "dateparser (>=1.2)",
    "apscheduler (>=3.11.2,<4.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "openai (>=1.50.0,<2.0.0)",
    "tenacity (>=8.2.0,<9.0.0)",
    "yookassa (>=3.9.0,<4.0.0)",
    "pyswisseph (>=2.10.3.2,<3.0.0.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "svgwrite (>=1.4.3,<2.0.0)",
    "cairosvg (>=2.8.2,<3.0.0)",
    "telegraph (>=2.2.0,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "pandas (>=3.0.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.24.0"
ruff = ">=0.8.0"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
